--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-remark": "^4.5.0",
     "gatsby-transformer-sharp": "^3.4.0",
+    "github-calendar": "^2.2.7",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "polished": "^4.1.2",
