--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.4",
+    "react-responsive": "^9.0.0-beta.5",
     "react-share": "^4.4.0",
     "react-twitter-widgets": "^1.9.5",
     "styled-components": "^5.2.3",
-    "styled-components-breakpoint": "^3.0.0-preview.20",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
