--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-advanced",
-  "description": "GatsbyJS starter that includes examples for advanced use cases.",
-  "version": "2.20.11",
-  "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
+  "name": "minimal-portfolio",
+  "description": "Minimal portfolio website",
+  "version": "0.0.1",
+  "author": ".NET Thailand team",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
     "babel-plugin-styled-components": "^1.12.0",
@@ -71,15 +71,14 @@
     "write-good": "^1.0.8"
   },
   "keywords": [
-    "gatsby"
+    "gatsby", "portfolio"
   ],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "develop": "gatsby develop",
-    "dev": "npm run develop",
-    "serve": "gatsby serve",
+    "start": "gatsby develop",
     "build": "gatsby build",
+    "serve": "gatsby serve",
     "build:pp": "gatsby build --prefix-paths",
     "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
     "clean": "rm -rf public && rm -rf .cache",
