New @dotnet-thailand/gatsby-theme-minimal-portfolio as workspace project

--- a/gatsby-theme-minimal-portfolio/package.json
+++ b/gatsby-theme-minimal-portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minimal-portfolio",
+  "name": "@dotnet-thailand/gatsby-theme-minimal-portfolio",
   "description": "Minimal portfolio website",
   "version": "0.0.1",
   "author": ".NET Thailand team",
