--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,10 @@
 # EditorConfig is awesome: https://EditorConfig.org
-
 # top-most EditorConfig file
 root = true
-
 # Matches multiple files with brace expansion notation
 # Set default charset
 [*]
 charset = utf-8
-
-# 4 space indentation
-[*.{js,jsx,tsx,ts}]
 indent_style = space
 indent_size = 2
+insert_final_newline = true
