--- a/@dotnetthailand/gatsby-theme-minimal-portfolio/package.json
+++ b/@dotnetthailand/gatsby-theme-minimal-portfolio/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dotnetthailand/minimal-portfolio.git",
+    "url": "git://github.com:dotnetthailand/minimal-portfolio.git",
     "directory": "@dotnetthailand/gatsby-theme-minimal-portfolio"
   },
   "keywords": [
@@ -16,7 +16,7 @@
     "portfolio"
   ],
   "license": "MIT",
-  "main": "n/a",
+  "main": "index.js",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
