Convert tags code to TypeScript

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -9,5 +9,7 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": []
+  "ignore": [
+    "minimal-portfolio-example"
+  ]
 }
