Define GraphQL schema to fix missing frontmatter in Markdown

--- a/minimal-portfolio-example/package.json
+++ b/minimal-portfolio-example/package.json
@@ -14,6 +14,7 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "clean-start": "gatsby clean; gatsby develop"
   }
 }
